[package]
name = "bevy-bridge"
version = "0.1.0"
publish = false
edition.workspace = true
license.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reth.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true

eyre.workspace = true
tokio.workspace = true
futures.workspace = true
bevy = "0.13.2"
bevy-inspector-egui = "0.23.4"
bevy_ecs = "0.13.2"
